--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "connect-mongo": "latest",
     "cookie-parser": "latest",
     "express": "latest",
-    "express-flash-notification": "^0.5.0",
+    "express-flash": "latest",
     "express-session": "latest",
     "fs": "latest",
     "jade": "latest",
@@ -19,6 +19,11 @@
     "passport": "latest",
     "passport-facebook": "latest",
     "path": "latest",
-    "req-flash": "0.0.3"
+    "method-override" : "latest",
+    "node-mailer" : "latest",
+    "browserify-aes"  : "latest",
+    "bcrypt-nodejs" : "latest",
+    "randombytes" : "latest",
+    "crypto"  : "latest"
   }
 }
