--- a/package.json
+++ b/package.json
@@ -16,11 +16,9 @@
     "jade-bootstrap": "latest",
     "mongoose": "^4.5.9",
     "morgan": "latest",
-    "passport": "latest",
-    "passport-facebook": "latest",
     "path": "latest",
     "method-override" : "latest",
-    "node-mailer" : "latest",
+    "nodemailer" : "latest",
     "browserify-aes"  : "latest",
     "bcrypt-nodejs" : "latest",
     "randombytes" : "latest",
